@@ -1,2 +1,23 @@
 # temperature-converter-javafx-basic
-A beginner friendly basic javafx desktop application
+"A beginner friendly basic javafx desktop application."
+It can be of great help, understanding the basic structure of the a desktop app.
+And an oveview of flow of code.
+
+JavaFX is a software platform for creating and delivering desktop applications, as well as rich Internet applications (RIAs) that can run across a wide variety of devices. JavaFX was developed with an intent to replace Swing as the standard GUI library for Java SE.
+
+Oracle 'Premier Support' for JavaFX is also available, for the current long-term version (Java JDK 8), through March 2022
+
+REMEMBER
+Since the JDK 11 release in 2018, JavaFX is part of the open-source OpenJDK, under the OpenJFX project.
+In order to use it with java 11,ensure downloading javaFX module ,extract at an appropriate location,
+and make sure it is added to the project.
+
+Also add the path below to the VM options under Run menu:
+--module-path /home/vivek/Downloads/javafx-sdk-11.0.2/lib --add-modules=javafx.controls,javafx.fxml 
+
+to ensure java compiler adds required javafx modules during compilation
+
+(Feel free to add basic stuff to the app)
+Hope to learn from the community.
+
+
